# oss-readiness-checker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ci-workflow.example.yml
examples/: readiness-report.md
src/oss_readiness/: __init__.py  __main__.py  checks.py
tests/: test_checks.py
